style/st1_pet_shop.css
.container {
    display: flex;
}
.col1 {
    padding-left: 30px;
    padding-right: 50px;
    padding-top: 100px;
    background: rgba(216, 225, 233, 0.1);
    border-right: 1px solid rgba(192, 192, 192, 0.534);
    display: flex;
    padding-bottom: 100px;
    /* align-items: center; */
}

.col2 {
    flex-grow: 1;
    padding: 0 70px;
}
.showcase {
    display: flex;
    flex-wrap: wrap;
}
.item {
    display: flex;
    flex-direction: column;
    /* flex-wrap: wrap; */
    min-width: 18rem;
    width: 25%;
    /* flex-grow: 1; */
    /* flex-shrink: 0; */
    padding: 10px 0;
    text-align: center;
    border: 1px solid #cecece;
    margin-right: 50px;
    margin-bottom: 35px;
}
.item_des {
    padding: 0 5px;
}
.itm_img {
    /* width: 18rem; */
    /* width: 100%; */
    height: 14rem;
    object-fit:contain;
    align-self: center;
}
.quantity {
    box-sizing: border-box;
    display: flex;
    background: #c3e1e280;
    padding: 5px 8%;
    margin-top: 12px;
    justify-content: space-between;
}

.counter {
    float: left;
    box-sizing: border-box;
    height: 1.8rem;
    width: 1.8rem;
    border: 0.1px solid #6e6e6e;
    background: #e3e3e3;
    color: #000000;
    font-size: 16px;
    margin: 0;
}
.counter:hover {
    background: #c9c9c9;
}
.counter:active {
    background: #b0b0b0;
}
.qnt_input {
    font-size: 12px; 
    float: left;
    border: 0.1px solid #333;
    border-left: 0px; 
    border-right: 0px; 
    padding: 0; 
    margin: 0; 
    text-align: center; 
    width: 1.8rem !important; 
    height: 1.8rem !important; 
    box-sizing: border-box;
}
.add {
    box-sizing: border-box;
    padding: 6px 35px;
    border: 0px solid #c7c7c7;
    background: #ff4646;
    color: #ffffff;
    font-size: 16px;
    font-weight: 600;
    margin-top: 10px;
    transition: 0.2s;
}
.add:hover {
    background: #e03232;
}
.add:active {
    background: #a31b1b;
}
.shop_heading {
    margin: 60px 0;

}
input[type="text"] {
    box-sizing: border-box;
    width: 23rem;
    padding: 5px;
}
textarea {
    resize: vertical;
    width: 23rem;
    min-height: 100px;
    max-height: 150px;
    /* min-width: 130px; */
}
form {
    margin: 30px 0;
}
.form_btn {
    background: #007AD3;
    margin-right: 2px;
    border: 2px solid #007AD3;
    color: white;
    padding: 5px 10px;
    font-weight: 600;
    font-size: 1.4rem;
    transition: 0.2s;
}
.rest {
    color: #007AD3;
    background: transparent;
}
.form_btn:hover {
    background: rgb(8, 98, 163);
    border-color: rgb(5, 98, 163);
    color: white;
}
.form_btn:active {
    background:rgb(11, 57, 90);
    color: rgb(255, 255, 255);
}
.cart_title {
    margin-top: 20px;
}
.cart_title::after {
    background-image: url('icons/cart.png');
    background-size: contain;
    display: inline-block; 
    height: 26px;
    width: 26px;
    margin-left: 10px;
    vertical-align:-30%;
    content:"";
}
/* CART */
.cart {
    display: flex;
}
.cart_table_col{
    display: flex;
    flex-direction: column;
    font-size: 1.6rem;
    color: #0E4E7B;
    font-weight: 600;
    /* max-width: 180px; */
    min-width: 70px;
    flex-grow: 1;
    /* justify-content: center; */
    /* border-right:1px solid#007AD3; */
    /* align-items: center; */
    /* background:rgba(192, 192, 192, 0.534); */
}
.cart_id_col {
    min-width: 30px;
    /* max-width: 40px; */
}   
/* .currency_col {
    min-width: 30px;
    max-width: 50px;
} */
.last_col {
    max-width: 100%;
    flex-grow: 1;
}
.th, .td {
    border-bottom: 1px solid black;
    overflow: hidden;
    white-space: nowrap;
    box-sizing: border-box;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
    /* background: lightblue; */
    /* border-right: 2px solid red; */
    /* width: 100%; */
    /* padding-right: 80px; */
    /* text-align: center; */
    /* vertical-align: middle; */
}
.th,.td, .cart_total {
    padding: 0 5px;
}
.td {
    color: black;
    font-size: 1.8rem;
}
.itm_des_col {
    max-width: 180px;
}
.store_row_no {
    display: none;
}
.align_right, .cart_price, .cart_price_total {
    width: 100%;
    text-align: right;
    /* margin-left: auto;
    margin-right: 30px; */
    /* background: #222; */
}
.start {
    width: 100%;
    text-align: left;
}
.cart_qnt {
    margin-right: auto;
    margin-left: 5px;
}
.cart_total {
    /* border-bottom: 1px solid black; */
    color: black;
    font-size: 1.8rem;
    box-sizing: border-box;
    width: 100%;
    height: 60px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 0px;
}
.cart_remove {
    font-size: 25px;
    margin-left: auto;
    margin-right: 25px;
    cursor: default;
}
.cart_img {
    height: 30px;
    /* justify-content: center; */
    object-fit: contain;
    /* background: rgb(60, 121, 0); */
}
.clear_cart {
    box-sizing: border-box;
    padding: 8px 15px;
    border: 0px solid #c7c7c7;
    background: #ff4646;
    color: #ffffff;
    font-size: 1.4rem;
    font-weight: 600;
    margin-top: 20px;
    margin-bottom: 80px;
    transition: 0.2s;
}
.clear_cart:hover {
    background: #e03232;
}
.clear_cart:active {
    background: #a31b1b;
}

